k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventhero-countdown-service
spec:
  selector:
    app: eventhero-countdown
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
